--- a/src/global.css
+++ b/src/global.css
@@ -8,7 +8,6 @@ body {
   padding: 0;
   background-color: #fff3e0;
   font-family: "Baloo 2", sans-serif;
-  overflow-x: hidden;
   max-width: 100%;
 }
 
